package maidsafe.priv;

message GenericPacket {
  required bytes data = 1;
  required bytes signature = 2;
  required int32 type = 3;
  optional bytes signing_id = 4;
}

message Encrypted {
  required bytes symm_encrypted_data = 1;
  required bytes asymm_encrypted_symm_key = 2; 
}

// Generic Message (for use in sending messages/files, sharing folders,
//                  annotating files, etc.)
message Message {
  required int32 type = 1;
  required bytes id = 2;
  optional bytes parent_id = 3;
  required bytes sender_public_username = 4;
  repeated bytes content = 5;
  optional bytes timestamp = 6;
  optional bytes subject = 7;
}

// MaidSafe Contact ID
message MCID {
  required bytes encrypted_mmid = 1;
  required bytes encrypted_public_username = 2;
  required bytes signature = 3;
}

// MaidSafe Message ID
message MMID {
  required bytes public_key = 1;
  required bytes signature = 2;
  repeated Encrypted encrypted_message = 3;
}

// MaidSafe Selectable ID
message MSID {
  required bytes public_key = 1;
  required bytes signature = 2;
  required bool accepts_new_contacts = 3;
  repeated bytes encrypted_mcid = 4;
}
